# Projetos-de-Engenharia-de-Dados---Apoena

./: README.md  pyproject.toml  script02.py  script03.py
Projeto 1/projeto-1.1-ingestao/: README.md  pyproject.toml  read_parquet.py  script01.py
Projeto 1/projeto-1.1-ingestao/data/latest/_dlt_loads/: freecurrency__1775934983.3064804.jsonl
Projeto 1/projeto-1.1-ingestao/data/latest/_dlt_pipeline_state/: freecurrency_pipeline__1775934983.3064804__064b22d3a9ade49ca66434e88d09520b209588499dfb7ef1833d117b9eba2814.jsonl
Projeto 1/projeto-1.1-ingestao/data/latest/_dlt_version/: freecurrency__1775934984.3301866__064b22d3a9ade49ca66434e88d09520b209588499dfb7ef1833d117b9eba2814.jsonl
Projeto 1/projeto-1.1-ingestao/minio/: docker-compose.yaml
Projeto 1/projeto-1.2-ingestao/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
Projeto 1/projeto-1.2-ingestao/dags/: currency_ingestion_dag.py
Projeto 1/projeto-1.2-ingestao/ingestion/: pipeline.py
Projeto 1/projeto-1.2-ingestao/scripts/: read_parquet.py  script01.py  script02.py  script03.py  script04.py
data/latest/_dlt_loads/: freecurrency__1775938496.7372408.jsonl
minio/: docker-compose.yaml
