[project]
name = "projeto-01.2-ingestao"
version = "0.1.0"
description = "Pipeline de ingestão de dados de câmbio com dlt, Airflow e MinIO"
requires-python = "==3.11.*"

dependencies = [
    # dlt core + destino filesystem (salva arquivos Parquet no MinIO)
    "dlt[filesystem]==1.4.1",
    # Serialização Parquet
    "pyarrow==15.0.2",
    # HTTP client (usado no source para chamar a API de câmbio)
    "requests==2.32.3",
    # S3-compatible: permite que o dlt/boto3 fale com o MinIO
    "s3fs==2024.6.1",
    "boto3==1.34.144",
    # Necessário para o dlt — pkg_resources não vem mais por padrão em ambientes uv
    # Fixado em < 71 pois a partir dessa versão pkg_resources foi separado do pacote
    "setuptools<71",
    # Carrega variáveis do .env automaticamente (usado nos scripts locais)
    "python-dotenv>=1.0.0",
    # Necessário para converter tabelas PyArrow em DataFrame
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    # Linter e formatter Python (substitui flake8, isort, pycodestyle, etc.)
    "ruff>=0.9.0",
]